Add is_onboarding_complete flag to users model (#112)
